<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@mipmap/banner" />
    <TextView
        android:id="@+id/txtInvitation"
        style="@style/viewCustom"
        android:layout_below="@+id/imageView"
        android:text="@string/invitation"
        android:textColor="@color/orange"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/txtInvitation"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="30dp"/>
    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:layout_width="320dp"
        android:layout_below="@+id/etEmail"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp"/>
    <ImageButton
        android:id="@+id/ibEye1"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etEmail"
        android:layout_toEndOf="@+id/etPassword"
        android:src="@drawable/ic_visibility_off"
        android:background="@color/gray_dark"
        android:onClick="callShowPassword"/>
    <EditText
        android:id="@+id/etPassword2"
        style="@style/viewCustom"
        android:layout_width="320dp"
        android:layout_below="@+id/etPassword"
        android:inputType="textPassword"
        android:hint="Repite la contraseña"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:visibility="visible"
        android:layout_marginBottom="10dp"/>
    <ImageButton
        android:id="@+id/ibEye2"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etPassword"
        android:layout_toEndOf="@+id/etPassword2"
        android:src="@drawable/ic_visibility_off"
        android:background="@color/gray_dark"
        android:visibility="visible"
        android:onClick="callShowPassword"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:layout_below="@+id/etPassword2"
        android:text="@string/login"
        android:textSize="20sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/green"
        android:layout_marginBottom="10dp"
        android:onClick="login"/>
    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:layout_below="@+id/btnLogin"
        android:text="@string/forgotPassword"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:onClick="forgotPassword"/>
    <CheckBox
        android:id="@+id/cbAcept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgotPassword"
        android:text="@string/acept"
        android:textSize="10sp"
        android:visibility="visible"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textColor="@color/salmon"
        android:layout_alignBaseline="@+id/cbAcept"
        android:layout_toEndOf="@+id/cbAcept"
        android:layout_marginLeft="5dp"
        android:textSize="10sp"
        android:visibility="visible"
        android:onClick="goTerms" />
    <Button
        android:id="@+id/btSignGoogle"
        style="@style/viewCustom"
        android:layout_below="@+id/cbAcept"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:onClick="callSignInGoogle"
        android:paddingStart="30dp"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btSignFacebook"
        style="@style/viewCustom"
        android:layout_below="@+id/btSignGoogle"
        android:text="@string/facebook"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:textAlignment="textStart"
        android:drawableLeft="@drawable/facebook"
        android:paddingStart="30dp"
        android:layout_marginBottom="7dp"/>

</RelativeLayout>