<?xml version="1.0" encoding="utf-8"?>
<!--7. Se creo el layout del activity login
        Se esta utilizando un linear layout con orientacion vertical
        dentro se colocaron todos los elementos que debe tener-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/gray_dark"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:src="@mipmap/banner"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>
    <!--8. Se creo un estilo para no tener que repetir algunos atributos en todos los elemetnos-->
    <TextView
        android:id="@+id/txtInvitation"
        style="@style/viewCustom"
        android:text="@string/invitation"
        android:textColor="@color/orange"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:inputType="textEmailAddress"

        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etPassword"
            style="@style/viewCustom"
            android:layout_width="320dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="20dp"/>
        <ImageButton
            android:id="@+id/ibEye1"
            android:layout_width="40dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_visibility_off"
            android:background="@color/gray_dark"
            android:onClick="callShowPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">
        <EditText
            android:id="@+id/etPassword2"
            style="@style/viewCustom"
            android:layout_width="320dp"
            android:inputType="textPassword"
            android:hint="Repite la contraseña"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="10dp"/>
        <ImageButton
            android:id="@+id/ibEye2"
            android:layout_width="40dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_visibility_off"
            android:background="@color/gray_dark"
            android:onClick="callShowPassword"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:text="@string/login"
        android:textSize="20sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/green"
        android:layout_marginBottom="10dp"
        android:onClick="login"/>
    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:text="@string/forgotPassword"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:onClick="forgotPassword"/>

    <!--9. Se hace otro linear layout en horiztonal para poder colocar dos alementos uno al lado del otro-->
    <LinearLayout
        android:id="@+id/lyTerms"
        style="@style/viewCustom"
        android:orientation="horizontal"
        android:backgroundTint="@color/gray_dark">
        <CheckBox
            android:id="@+id/cbAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acept"
            android:textSize="10sp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/salmon"
            android:layout_marginLeft="5dp"
            android:textSize="10sp"
            android:onClick="goTerms" />

    </LinearLayout>

    <Button
        android:id="@+id/btSignGoogle"
        style="@style/viewCustom"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:onClick="callSignInGoogle"
        android:paddingStart="30dp"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btSignFacebook"
        style="@style/viewCustom"
        android:text="@string/facebook"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:textAlignment="textStart"
        android:drawableLeft="@drawable/facebook"
        android:paddingStart="30dp"
        android:layout_marginBottom="7dp"
        android:onClick="callSignInFacebook"/>


</LinearLayout>