<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_dark"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="207dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txtInvitation"
        style="@style/viewCustom"
        android:layout_marginTop="40dp"
        android:text="@string/invitation"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInvitation" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />
    <ImageButton
        android:id="@+id/ibEye1"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_visibility_off"
        android:background="@color/gray_dark"
        android:onClick="callShowPassword"
        app:layout_constraintStart_toEndOf="@id/etPassword"
        app:layout_constraintTop_toTopOf="@id/etPassword"/>
    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:hint="Repite la contraseña"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>
    <ImageButton
        android:id="@+id/ibEye2"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etPassword"
        android:layout_toEndOf="@+id/etPassword2"
        android:src="@drawable/ic_visibility_off"
        android:background="@color/gray_dark"
        android:visibility="visible"
        android:onClick="callShowPassword"
        app:layout_constraintStart_toEndOf="@id/etPassword2"
        app:layout_constraintTop_toTopOf="@id/etPassword2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword2"
        android:onClick="login"/>
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgotPassword"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:onClick="forgotPassword"/>
    <CheckBox
        android:id="@+id/cbAcept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/acept"
        android:textSize="10sp"
        android:visibility="visible"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textColor="@color/salmon"
        android:layout_marginLeft="5dp"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/cbAcept"
        app:layout_constraintBaseline_toBaselineOf="@id/cbAcept"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"
        android:onClick="goTerms" />
    <Button
        android:id="@+id/btSignGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:onClick="callSignInGoogle"
        android:paddingStart="30dp"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbAcept"/>
    <Button
        android:id="@+id/btSignFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/facebook"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:textAlignment="textStart"
        android:drawableLeft="@drawable/facebook"
        android:paddingStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btSignGoogle"/>

</androidx.constraintlayout.widget.ConstraintLayout>